salesforce_sfdx/main/default/objects/AccountContactRelation/fields/OSFMXApellidoContacto__c.field-meta.xml
<CustomField>
    <fullName>OSFMXApellidoContacto__c</fullName>
    <formula>Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido de Contacto</label>
    <type>Text</type>
</CustomField>