salesforce_sfdx/main/default/objects/AccountContactRelation/fields/OSFMXCelular__c.field-meta.xml
<CustomField>
    <fullName>OSFMXCelular__c</fullName>
    <formula>Contact.MobilePhone</formula>
    <label>Celular</label>
    <type>Text</type>
</CustomField>