salesforce_sfdx/main/default/objects/AccountContactRelation/fields/OSFMXEmail__c.field-meta.xml
<CustomField>
    <fullName>OSFMXEmail__c</fullName>
    <formula>Contact.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>