salesforce_sfdx/main/default/objects/AccountContactRelation/fields/OSFMXName__c.field-meta.xml
<CustomField>
    <fullName>OSFMXName__c</fullName>
    <formula>Contact.FirstName &amp; " " &amp; Contact.LastName</formula>
    <label>Name Contact</label>
    <type>Text</type>
</CustomField>