salesforce_sfdx/main/default/objects/AccountContactRelation/fields/OSFMXNombreContacto__c.field-meta.xml
<CustomField>
    <fullName>OSFMXNombreContacto__c</fullName>
    <formula>Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Contacto</label>
    <type>Text</type>
</CustomField>