salesforce_sfdx/main/default/objects/AccountContactRelation/fields/OSFMXOwnerName__c.field-meta.xml
<CustomField>
    <fullName>OSFMXOwnerName__c</fullName>
    <formula>Contact.Owner.FirstName + ' ' + Contact.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Propietario</label>
    <type>Text</type>
</CustomField>