salesforce_sfdx/main/default/objects/AccountContactRelation/fields/OSMXCargo__c.field-meta.xml
<CustomField>
    <fullName>OSMXCargo__c</fullName>
    <formula>Contact.Title</formula>
    <label>Cargo</label>
    <type>Text</type>
</CustomField>